--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,17 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: #e7ebf0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div
+      id="root"
+      style="
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-content: space-between;
+      "
+    ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
