feat: fecth api product

--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,14 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #e7ebf0">
+  <body style="background-color: #f6f9fc">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div
       id="root"
       style="
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-evenly;
+        justify-content: center;
         align-content: space-between;
       "
     ></div>
